# rpc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  benchmark.md  hwclient.cpp  hwserver.cpp  vectorTest.cpp  zhelpers.hpp
asio/: CMakeLists.txt  asioclient.cpp  asioserver.cpp  async_tcp_echo_server.cpp
brpc/: CMakeLists.txt  client.cpp  server.cpp
builder/: CMakeLists.txt  PersonBuilder.cpp  PersonBuilder.h  main.cpp  person.cpp  person.h
consistent_hash/: CMakeLists.txt  consistent_hash.h  example.cpp  test.cpp
even-http/: CMakeLists.txt  comm_util.cc  comm_util.cpp  comm_util.h  event_http_request.cpp  event_http_request.h  event_http_server.cpp  event_http_server.h  example.cpp  example_old.cpp  http_message_handler.cc  http_message_handler.h  http_server.cc  http_server.h  message.h  network_manager.cpp  network_manager.h  node.cpp  node.h  node_manager.cpp  node_manager.h  scheduler_manager.h  server_manager.cpp  server_manager.h  tcp_client.cc  tcp_client.cpp  tcp_client.h  tcp_client_example.cpp  tcp_message_handler.cc  tcp_message_handler.cpp  tcp_message_handler.h  tcp_server.cc  tcp_server.h  tcp_server_example.cpp  worker_manager.h
even-http/protos/: comm.proto
even-http/ps/: CMakeLists.txt  common.h  embedding_table_shard.cc  embedding_table_shard.h  embedding_table_shard_metadata.cc  embedding_table_shard_metadata.h  util.cc  util.h  util_test.cpp  worker.cc  worker.h
even-http/ps/comm/: CMakeLists.txt  comm_util.cc  comm_util.h  example_old.cpp  http_message_handler.h  http_server.cc  message.h  network_manager.h  node.cpp  node.h  node_manager.cpp  node_manager.h  server_manager.h  tcp_client.cc  tcp_client.h  tcp_message_handler.cc  tcp_message_handler.h  tcp_server.cc  tcp_server.h  tcp_server_example.cpp  worker_manager.cpp  worker_manager.h
even-http/ps/comm/protos/: comm.proto  ps.proto
even-http/ps/core/: CMakeLists.txt  abstract_node.cc  abstract_node.h  backup.cpp  client.cpp  client.sh  client_example.cpp  client_test.cpp  cluster_config.cc  cluster_config.h  comm_util.cc  comm_util.h  configuration.h  count_down_latch.cc  count_down_latch.h  example_old.cpp  file_configuration.cc  file_configuration.h  fsm.cpp  function_test.cpp  http_client.cc  http_client.cpp  http_client.h  http_client_example.cpp  http_message_handler.cc  http_message_handler.h  http_server.cc  http_server.h  log.txt  message.h  node.cc  node.cpp  node.h  node_info.h  node_manager.cc  node_manager.cpp  node_manager.h  node_manager_test.cpp  node_manager_test.h  protobuf_serialize_test.cc  (+34 more)
even-http/ps/core/protos/: comm.proto  ps.proto  test.proto
event-tcp/: CMakeLists.txt  msg_client.cpp  msg_server.cpp  msg_server_new.cpp  proto_client.cpp  proto_client.h  proto_server.cpp  proto_server.h  proto_utils.cpp  proto_utils.h
grpc/: CMakeLists.txt
grpc/src/: greeter_async_client.cc  greeter_async_client2.cc  greeter_async_server.cc  greeter_client.cc  greeter_client.cpp  greeter_server.cc  greeter_server.cpp
libevent/: CMakeLists.txt  client1.cpp  client4.cpp  hello-world.cpp  server1.cpp  server4.cpp  test.cpp  test1.cpp  uuid.cpp
libevent-example/: client1.cpp  client3.cpp  client4.cpp  message.cpp  message.h  server3.cpp  server4.cpp  uuid.cpp
libevent-example/example/: server1.cpp  server4.cpp
libevent-example/multithread/: CMakeLists.txt
libevent/example/: CMakeLists.txt  tcp_echo_example.cpp
libevent/src/: CMakeLists.txt  server2.cpp  server3.cpp  signal-test.cpp
log/: CMakeLists.txt  log_adapter.cc  log_adapter.h
log/utils/: CMakeLists.txt  log_adapter.cc  log_adapter.h  logging_level.cc  ms_utils.cc
mindspore/ps/: CMakeLists.txt  parameter_server.cc  parameter_server.h  util.cc  util.h  worker.cc  worker.h  worker_temp.cc  worker_temp.h
protos/: echo.proto
ps-lite-test/: CMakeLists.txt  test_connection.cpp  test_kv_app_benchmark.cpp
seastar/: CMakeLists.txt  tcp_sctp_client_demo.cpp  tcp_sctp_server_demo.cpp
seastar/include/: tls_echo_server.h
tests/: CMakeLists.txt  abstract_node_test.cc  cluster_config_test.cc  cluster_connection_failed_test.cc  cluster_connection_test.cc  common_test.cc  common_test.h  common_util_test.cc  common_util_test.cpp  count_down_latch_test.cc  embedding_table_shard_metadata_test.cc  embedding_table_shard_test.cc  http_client_test.cc  tcp_client_tests.cc  tcp_client_tests.cpp  tcp_kv_server_test.cc  tcp_message_handler_test.cc  tcp_server_tests.cpp  unit_tests.cpp  worker_test.cc
tests/common/: common_test.cc  common_test.h
tests/protos/: comm.proto  ps.proto
zeromq/: BenchmarkLogger.hpp  CMakeLists.txt  hwclient.cpp  hwserver.cpp
