cmake_minimum_required(VERSION 3.15)
project(rpc)

add_subdirectory(zeromq)
add_subdirectory(grpc)
add_subdirectory(libevent)
add_subdirectory(brpc)
add_subdirectory(libuv)
add_subdirectory(ps-lite)
add_subdirectory(asio)
add_subdirectory(seastar)


#FILE(GLOB_RECURSE newList *.cpp)
#set(dirList "")
#foreach(arg ${newList})
#    get_filename_component(dirPath ${arg} PATH)
#    get_filename_component(folderName ${dirPath} NAME)
#    set(dirList ${dirList} ${folderName})
#endforeach()
#LIST(REMOVE_DUPLICATES dirList)
#foreach(subDir ${dirList})
#    message(STATUS "dir:${subDir}")
#    add_subdirectory(${subDir})
#endforeach()