cmake_minimum_required(VERSION 3.15)
project(rpc)

add_subdirectory(zeromq)
add_subdirectory(grpc)
# add_subdirectory(libevent-example)
#add_subdirectory(brpc)
add_subdirectory(libuv)
add_subdirectory(ps-lite)
add_subdirectory(ps-lite-test)
add_subdirectory(asio)
# add_subdirectory(seastar)
#add_subdirectory(even-http/ps/core)
add_subdirectory(even-http)
add_subdirectory(mindspore)
add_subdirectory(tests)
#add_subdirectory(incubator-brpc)
add_subdirectory(log)
add_subdirectory(event-tcp)
add_subdirectory(consistent_hash)
add_subdirectory(builder)
add_subdirectory(libevent)


#FILE(GLOB_RECURSE newList *.cpp)
#set(dirList "")
#foreach(arg ${newList})
#    get_filename_component(dirPath ${arg} PATH)
#    get_filename_component(folderName ${dirPath} NAME)
#    set(dirList ${dirList} ${folderName})
#endforeach()
#LIST(REMOVE_DUPLICATES dirList)
#foreach(subDir ${dirList})
#    message(STATUS "dir:${subDir}")
#    add_subdirectory(${subDir})
#endforeach()